# CURIO

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Home.py  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml  tests.yml:Zone.Identifier
curio/: __init__.py  kegg_api.py  ncbi_gene_api.py  ncbi_gene_api.py:Zone.Identifier  net_utils.py  pubmed_api.py  reactome_api.py  report.py  string_api.py  structure_api.py  uniprot_api.py
examples/: sample_queries.json
pages/: 1_UniProt.py  2_PubMed.py  3_NCBI_Gene.py  4_Reactome.py  5_Structures.py  6_KEGG.py  7_STRING.py  8_Report.py  9_Settings_&_Logs.py
tests/: test_apis.py
